# tunage

./: .travis.yml  CMakeLists.txt  README.md
shaders/: 3d_stones.glsl  basic.glsl  circle.glsl  pixel.glsl  saber.glsl  waveform.glsl
src/: ButtonRow.qml  CMakeLists.txt  applicationcontroller.cpp  applicationcontroller.h  audiotaginfo.cpp  audiotaginfo.h  main.cpp  main.qml  playbackengine.cpp  playbackengine.h  playlistitemmodel.cpp  playlistitemmodel.h  qml.qrc  qtquickcontrols2.conf  tunage.rc  visualisationrenderer.cpp  visualisationrenderer.h
src/audio_engine/: decoder.h  playback.h  ringbuffer.h  spectrumanalyzer.h  types.h
